fix overflow

--- a/project_env/chat_app/home/static/room.css
+++ b/project_env/chat_app/home/static/room.css
@@ -258,4 +258,8 @@ span {
     overflow-y: auto;
 }
 
+p{
+    word-wrap: break-word;
+}
+
 
